// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fetch members and groups and render for admin 1`] = `
<div
  className="page page-limited"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="organization.members.page"
  />
  <Suggestions
    suggestions="organization_members"
  />
  <MembersPageHeader
    loading={false}
  >
    <div
      className="page-actions"
    >
      <AddMemberForm
        addMember={[Function]}
        memberLogins={
          Array [
            "admin",
            "john",
          ]
        }
        organization={
          Object {
            "actions": Object {
              "admin": true,
            },
            "key": "foo",
            "name": "Foo",
          }
        }
      />
      <DocTooltip
        className="spacer-left"
        doc={Promise {}}
      />
    </div>
  </MembersPageHeader>
  <MembersListHeader
    handleSearch={[Function]}
    total={3}
  />
  <MembersList
    members={
      Array [
        Object {
          "avatar": "",
          "groupCount": 3,
          "login": "admin",
          "name": "Admin Istrator",
        },
        Object {
          "avatar": "7daf6c79d4802916d83f6266e24850af",
          "groupCount": 1,
          "login": "john",
          "name": "John Doe",
        },
      ]
    }
    organization={
      Object {
        "actions": Object {
          "admin": true,
        },
        "key": "foo",
        "name": "Foo",
      }
    }
    organizationGroups={
      Array [
        Object {
          "default": true,
          "description": "",
          "id": 1,
          "membersCount": 2,
          "name": "Members",
        },
        Object {
          "default": false,
          "description": "",
          "id": 2,
          "membersCount": 0,
          "name": "Watchers",
        },
      ]
    }
    removeMember={[Function]}
    updateMemberGroups={[Function]}
  />
  <ListFooter
    count={2}
    loadMore={[Function]}
    ready={true}
    total={3}
  />
</div>
`;

exports[`should fetch members and render for non-admin 1`] = `
<div
  className="page page-limited"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="organization.members.page"
  />
  <Suggestions
    suggestions="organization_members"
  />
  <MembersPageHeader
    loading={true}
  />
</div>
`;

exports[`should fetch members and render for non-admin 2`] = `
<div
  className="page page-limited"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="organization.members.page"
  />
  <Suggestions
    suggestions="organization_members"
  />
  <MembersPageHeader
    loading={false}
  />
  <MembersListHeader
    handleSearch={[Function]}
    total={3}
  />
  <MembersList
    members={
      Array [
        Object {
          "avatar": "",
          "groupCount": 3,
          "login": "admin",
          "name": "Admin Istrator",
        },
        Object {
          "avatar": "7daf6c79d4802916d83f6266e24850af",
          "groupCount": 1,
          "login": "john",
          "name": "John Doe",
        },
      ]
    }
    organization={
      Object {
        "key": "foo",
        "name": "Foo",
      }
    }
    organizationGroups={Array []}
    removeMember={[Function]}
    updateMemberGroups={[Function]}
  />
  <ListFooter
    count={2}
    loadMore={[Function]}
    ready={true}
    total={3}
  />
</div>
`;
